ui: resources: preview: overlay: show parent set also for entries
ported over templates, styles, scripts from sets and made them more general.
also adds a test for the whole overlay feature…

---

Squashed commit of the following:

commit 20d8ad1cdf59991c61770cda66645472e72007de
Author: Max F. Albrecht <1@178.is>
Date:   Tue Oct 21 10:49:13 2014 +0200

    test: add scenario for plain listing of resources

commit dede6ce60c964670293876275cb15d2f2a0840bc
Author: Max F. Albrecht <1@178.is>
Date:   Mon Oct 20 17:51:48 2014 +0200

    add a test for old and new overlays

commit 0947095bb6c3f889e5fb520e01bb4f5ad396b030
Author: Max F. Albrecht <1@178.is>
Date:   Mon Oct 20 16:08:34 2014 +0200

    sass: fix small visual bug in overlay arrows

    showed a grey line on retina displays, no overlayed with a box-shadow

commit bacf6287eab7a89406e6b2d17f2a2dd18dbab28e
Author: Max F. Albrecht <1@178.is>
Date:   Mon Oct 20 14:57:32 2014 +0200

    move and adjust javascript and client templates

commit cce7d90c80edace3436f7d82d035821a3859517b
Author: Max F. Albrecht <1@178.is>
Date:   Mon Oct 20 12:25:55 2014 +0200

    move .level-up overlay template from media_sets to media_ressources; use it; fix styles
    (resources container view)

commit 9fed30dd945d7b5e4a56fb268ba1c3a13db10f95
Author: Max F. Albrecht <1@178.is>
Date:   Mon Oct 20 12:17:33 2014 +0200

    refactor/simplify styles (grid mode)

commit 6a0e86fe57546a1195a6bb17775ae9609a2a83e3
Author: Max F. Albrecht <1@178.is>
Date:   Mon Oct 20 12:11:30 2014 +0200

    move .level-up overlay template from media_sets to media_ressources; use it; fix styles

--- a/app/assets/stylesheets/combos/_ui-resources-grid.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-grid.sass
@@ -1,7 +1,7 @@
 /**
  * ## Media Resources Grid Mode `.ui-resources.grid`
  *
- * .active    - To be interacted with
+ * .active - To be interacted with
  *
  * Styleguide 7.9.1
 
@@ -74,36 +74,31 @@
 .grid.active
   .ui-thumbnail-privacy
     display: block
+  .ui-thumbnail.video .ui-thumbnail-image-wrapper
+    background: $white image-url("backgrounds/thumb-video-backg.png") 0 0px no-repeat
+  
   // Show / Hide on hover
-  .ui-thumbnail.media-set:hover,
-  .ui-thumbnail.filter-set:hover,
-  .ui-thumbnail.media-entry-incomplete:hover,
-  .ui-thumbnail.media-entry:hover
+  .ui-thumbnail:hover
     .ui-thumbnail-actions
       display: block
     .ui-thumbnail-meta-subtitle
       display: none
-  .ui-thumbnail.media-set:hover .ui-thumbnail-level-up-items,
-  .ui-thumbnail.media-set:hover .ui-thumbnail-level-down-items,
-  .ui-thumbnail.filter-set:hover .ui-thumbnail-level-up-items,
-  .ui-thumbnail.filter-set:hover .ui-thumbnail-level-down-items
-    display: block
+    .ui-thumbnail-level-up-items,
+    .ui-thumbnail-level-down-items
+      display: block
+      
   // Hover and active states styles (backgrounds, shadows and such)
+  // most have background, shadow, no border-radius:
   .ui-thumbnail:hover
+    background: $white
     +box-shadow(0 0 3px $darken-more)
-  .ui-thumbnail.media-entry:hover,
+  // only has level-up-top, so it gets border-radius on bottom:
+  .ui-thumbnail.media-entry:hover
+    +border-bottom-radius($border-radius-m)
+  // has NO level-up, so it gets border-radius all around:
   .ui-thumbnail.media-entry-incomplete:hover
+    background: $white
     +border-radius($border-radius-m)
-    background: $white
-  .ui-thumbnail.media-set:hover,
-  .ui-thumbnail.filter-set:hover
-    +box-shadow(0 0 3px $darken-more)
-    background: $white
-  .ui-thumbnail.media-catalog:hover
-    +border-radius($border-radius-m)
-    background: $white
-  .ui-thumbnail.video .ui-thumbnail-image-wrapper
-    background: $white image-url("backgrounds/thumb-video-backg.png") 0 0px no-repeat
 
 // Media Queries
 
