templates: refactor. fix usage of _layout and nested .ui-container
Squashed commit of the following:

- templates: media_resources: split _list from _wrapper
- remove obsolete templates
- sass: remove stray pixel line below .ui-tabs
- sass: fix nested .rounded .ui-containers
- sass: better css fix for nested .ui-container.rounded > .ui-container.bright etc.
- sets/entries: fix nesting of .ui-containers; consistent layout templating
- container nesting: fix /filter_set
- container nesting: fix /contexts
- container nesting: fix /entries/edit_multiple
- container nesting: fix /my
- container nesting: fix /explore
- container nesting: fix /custom_urls
- container nesting: fix /import
- container nesting: fix /media_resources
- container nesting: fix /media_entries
- container nesting: fix /permissions
- container nesting: fix /responsibilities
- container nesting: fix /search
- container nesting: fix /media_resources/browse
- inline unnecessary partials

--- a/app/assets/stylesheets/components/_ui-containers.sass
+++ b/app/assets/stylesheets/components/_ui-containers.sass
@@ -98,20 +98,34 @@
 
 // Rounded ui-containers
 
-.ui-container.rounded
-  +border-radius($border-radius-m)
+.ui-container
+  &.rounded
+    +border-radius($border-radius-m)
 
-.ui-container.rounded-top
-  +border-top-radius($border-radius-m)
+  &.rounded-top
+    +border-top-radius($border-radius-m)
 
-.ui-container.rounded-bottom
-  +border-bottom-radius($border-radius-m)
+  &.rounded-bottom
+    +border-bottom-radius($border-radius-m)
 
-.ui-container.rounded-left
-  +border-left-radius($border-radius-m)
+  &.rounded-left
+    +border-left-radius($border-radius-m)
 
-.ui-container.rounded-right
-  +border-right-radius($border-radius-m)
+  &.rounded-right
+    +border-right-radius($border-radius-m)
+
+  &.rounded-top-left
+    +border-top-left-radius($border-radius-m)
+
+  &.rounded-top-right
+    +border-top-right-radius($border-radius-m)
+
+  &.rounded-bottom-left
+    +border-bottom-left-radius($border-radius-m)
+
+  &.rounded-bottom-right
+    +border-bottom-right-radius($border-radius-m)
+
 
 // Table-layout ui-containers
 
