--- a/app/assets/stylesheets/components/_ui-tabs.sass
+++ b/app/assets/stylesheets/components/_ui-tabs.sass
@@ -22,7 +22,7 @@
 
 .ui-tabs-item a
   @extend .button
-  +box-shadow($lighten-more 0 1px 0 0, $darken-less 0 -1px 2px 0 inset)
+  +box-shadow($darken-less 0 -1px 2px 0 inset)
   +border-bottom-left-radius(0)
   +border-bottom-right-radius(0)
   border-bottom: none
