--- a/app/views/application/_collage.html.haml
+++ b/app/views/application/_collage.html.haml
@@ -1,4 +1,4 @@
-#teaser-set.ui-collage
+#teaser-set.ui-collage.ui-container.rounded-top-right
   - 2.times do |row|
     .ui-collage-row
       - 5.times do |col|
