--- a/app/views/application/sidebar/_browse.html.haml
+++ b/app/views/application/sidebar/_browse.html.haml
@@ -3,7 +3,7 @@
   type = @media_resource.type.underscore.dasherize
   media_type = @media_resource.media_type.downcase
   
-.app-body-sidebar.table-cell.bright.ui-container.bordered-right.rounded-left.table-side
+.app-body-sidebar.table-cell.bright.ui-container.bordered-right.rounded-bottom-left.table-side
 
   .ui-container.rounded-left.phm.pvl
 
