--- a/app/views/application/sidebar/_explore.html.haml
+++ b/app/views/application/sidebar/_explore.html.haml
@@ -1,4 +1,4 @@
-.app-body-sidebar.bright.ui-container.table-cell.bordered-right.rounded-left.table-side
+.app-body-sidebar.bright.ui-container.table-cell.bordered-right.rounded-bottom-left.table-side
   .ui-container.rounded-left.phm.pvl
     %ul.ui-side-navigation
 
