--- a/app/views/application/sidebar/_my_archive.html.haml
+++ b/app/views/application/sidebar/_my_archive.html.haml
@@ -7,7 +7,7 @@
   @user_favorite_resources_count ||= 0
 
 - if !@latest_user_resources_count.zero? or !@user_favorite_resources_count.zero? or !@latest_user_imports_count.zero? or !@user_keywords_count.zero? or !@user_entrusted_resources_count.zero? or !@user_groups_count.zero?
-  .app-body-sidebar.table-cell.bright.ui-container.bordered-right.rounded-left.table-side
+  .app-body-sidebar.table-cell.bright.ui-container.bordered-right.rounded-bottom-left.table-side
     .ui-container.rounded-left.phm.pvl
       %ul.ui-side-navigation
 
