--- a/app/views/custom_urls/confirm_url_transfer.html.haml
+++ b/app/views/custom_urls/confirm_url_transfer.html.haml
@@ -12,7 +12,7 @@
           
     .app-body-ui-container
     
-      .ui-container.bright.bordered.rounded.pal
+      .ui-container.bright.rounded.pal.rounded-right.rounded-bottom
       
         .row
           .ui-info-box
