--- a/app/views/custom_urls/index.html.haml
+++ b/app/views/custom_urls/index.html.haml
@@ -16,7 +16,7 @@
               
     .app-body-ui-container
     
-      .ui-container.bright.bordered.rounded.pal
+      .ui-container.bright.bordered.pal.rounded-right.rounded-bottom
       
         %form#ui-custom-urls
           
