--- a/app/views/custom_urls/new.html.haml
+++ b/app/views/custom_urls/new.html.haml
@@ -10,7 +10,7 @@
             %i.icon-link
             = "Neue Adresse für \"#{@media_resource.title}\""
     
-      .ui-container.bright.bordered.rounded.pal
+      .ui-container.bright.bordered.pal.rounded-right.rounded-bottom
       
         .row
           .col1of2
