--- a/app/views/media_entries/show.html.haml
+++ b/app/views/media_entries/show.html.haml
@@ -1,5 +1,5 @@
 - content_for :content do
-  .bright.ui-container.pal
+  .ui-container.bright.pal.rounded-top-right
 
     .ui-media-overview
       %dl.ui-media-overview-metadata.ui-metadata-box
