--- a/app/views/my/contexts.html.haml
+++ b/app/views/my/contexts.html.haml
@@ -12,7 +12,7 @@
             = _("Vokabulare")
 
     .app-body-ui-container
-      .bordered.ui-container.midtone.rounded.table
+      .bordered.ui-container.midtone.table.rounded-right.rounded-bottom
 
         = render :partial => "application/sidebar/my_archive"
 
