--- a/app/views/my/dashboard.html.haml
+++ b/app/views/my/dashboard.html.haml
@@ -18,7 +18,7 @@
             = _("Import media")
 
     .app-body-ui-container
-      .bordered.ui-container.midtone.rounded.table
+      .bordered.ui-container.midtone.table.rounded-right.rounded-bottom
 
         = render "application/sidebar/my_archive"
 
