--- a/app/views/permissions/edit.html.haml
+++ b/app/views/permissions/edit.html.haml
@@ -55,7 +55,7 @@
         = render :partial => "media_resources/selection",
                  :locals => {:media_resources => @media_resources.limit(100)}
 
-      .ui-container.bright.bordered.rounded.pal
+      .ui-container.bright.bordered.rounded-right.rounded-bottom.pal
 
         %form#ui-rights-management{data: @data}
 
