--- a/app/views/search/show.html.haml
+++ b/app/views/search/show.html.haml
@@ -21,7 +21,7 @@
         .ui-body-title-actions= render :partial => "login_action", :locals => {:primary => false}
 
     .app-body-ui-container
-      .bordered.ui-container.midtone.rounded.table
+      .bordered.ui-container.midtone.rounded-right.rounded-bottom.table
         .ui-search-form
 
           =form_tag result_search_path, method: 'GET' do
