--- a/app/views/contexts/_layout.html.haml
+++ b/app/views/contexts/_layout.html.haml
@@ -14,7 +14,8 @@
 
       = render :partial => "contexts/tabs"
 
-      = yield :content
+      .ui-container.tab-content.bordered.rounded-right.rounded-bottom
+        = yield :content
 
   .app-footer-push
 = render :partial => "application/footer"
