--- a/app/views/contexts/entries.html.haml
+++ b/app/views/contexts/entries.html.haml
@@ -1,44 +1,42 @@
 - content_for :content do
-  
-  .ui-container.rounded-right.rounded-bottom.tab-content
-    .ui-container.bright.bordered.pal
-      .row
-        .col2of3
-          %p.paragraph-l= @context.description
+  .ui-container.bright.pal.rounded-top-right
+    .row
+      .col2of3
+        %p.paragraph-l= @context.description
 
-    #ui-resources-list-container.ui-container.midtone.bordered.rounded-bottom
+  #ui-resources-list-container.ui-container.midtone.rounded-right.rounded-bottom
 
-      -# TODO:
-      -# - subtitle = if @entries_count == @entries_total_count
-      -#   - n_("%d item", "%d items", @entries_count) % [@entries_count]
-      -# - else 
-      -#   - _("%d of %d items visible to you") % [@entries_count, @entries_total_count]
+    -# TODO:
+    -# - subtitle = if @entries_count == @entries_total_count
+    -#   - n_("%d item", "%d items", @entries_count) % [@entries_count]
+    -# - else 
+    -#   - _("%d of %d items visible to you") % [@entries_count, @entries_total_count]
+        
+    = render :partial => "media_resources/list/toolbar", 
+               :locals => {:title => n_("Vokabular enthält %d Inhalt", "Vokabular enthält %d Inhalte", @entries_count) % [@entries_count],
+                           :actions => render(:partial => "media_sets/actions/save_display_settings")}
+    -# TODO:               :subtitle => subtitle,
+
+    = render :partial => "media_resources/list/filterbar", :locals => {:filter_by_type => false}
+
+    .ui-resources-holder.pam
+
+      .ui-container.table.auto
+
+        = render :partial => "media_resources/list/filter"
+
+        .ui-container.table-cell.table-substance
           
-      = render :partial => "media_resources/list/toolbar", 
-                 :locals => {:title => n_("Vokabular enthält %d Inhalt", "Vokabular enthält %d Inhalte", @entries_count) % [@entries_count],
-                             :actions => render(:partial => "media_sets/actions/save_display_settings")}
-      -# TODO:               :subtitle => subtitle,
+          %ul#ui-resources-list.ui-resources{:class => ui_resources_class}
 
-      = render :partial => "media_resources/list/filterbar", :locals => {:filter_by_type => false}
+            .pvh.mth
+              .ui-preloader
 
-      .ui-resources-holder.pam
-
-        .ui-container.table.auto
-
-          = render :partial => "media_resources/list/filter"
-
-          .ui-container.table-cell.table-substance
-            
-            %ul#ui-resources-list.ui-resources{:class => ui_resources_class}
-
-              .pvh.mth
-                .ui-preloader
-
-  :coffeescript
-    jQuery -> 
-      mediaResourcesController = new App.MediaResourcesController.Index
-        baseFilter: #{{:context_ids => [@context.id]}.to_json}
-        startFilterParams: #{MediaResource.get_filter_params(params).to_json}
+    :coffeescript
+      jQuery -> 
+        mediaResourcesController = new App.MediaResourcesController.Index
+          baseFilter: #{{:context_ids => [@context.id]}.to_json}
+          startFilterParams: #{MediaResource.get_filter_params(params).to_json}
 
 = render :partial => "contexts/layout"
 
