--- a/app/views/explore/index.html.haml
+++ b/app/views/explore/index.html.haml
@@ -14,7 +14,7 @@
         .ui-body-title-actions= render :partial => "login_action"
 
     .app-body-ui-container
-      .bordered.ui-container.midtone.rounded.table
+      .bordered.ui-container.midtone.table.rounded-right.rounded-bottom
 
         = render :partial => "application/sidebar/explore"
 
