--- a/app/views/filter_sets/edit.html.haml
+++ b/app/views/filter_sets/edit.html.haml
@@ -21,9 +21,9 @@
 
     .app-body-ui-container
 
-      .ui-container.rounded-right.rounded-bottom.tab-content
+      .ui-container.tab-content.bordered.rounded-right.rounded-bottom
       
-        .ui-container.bright.bordered.pal
+        .ui-container.bright.pal.rounded-top-right
           .ui-set-overview
 
             .ui-set-preview
@@ -37,25 +37,25 @@
                            :locals => {:context => ::Context.find("media_set"), 
                                        :as_table => true}
 
-      #ui-resources-list-container.ui-container.midtone.bordered.rounded-bottom
+        .ui-container#ui-resources-list-container.midtone.rounded-bottom
 
-        = render :partial => "media_resources/list/toolbar", 
-                   :locals => {:actions => render(:partial => "media_sets/actions/save_display_settings")}
+          = render :partial => "media_resources/list/toolbar", 
+                     :locals => {:actions => render(:partial => "media_sets/actions/save_display_settings")}
 
-        = render :partial => "media_resources/list/filterbar"
+          = render :partial => "media_resources/list/filterbar"
 
-        .ui-resources-holder.pam
+          .ui-resources-holder.pam
 
-          .ui-container.table.auto
+            .ui-container.table.auto
 
-            = render :partial => "media_resources/list/filter"
+              = render :partial => "media_resources/list/filter"
 
-            .ui-container.table-cell.table-substance
-              
-              %ul#ui-resources-list.ui-resources{:class => ui_resources_class}
+              .ui-container.table-cell.table-substance
+                
+                %ul#ui-resources-list.ui-resources{:class => ui_resources_class}
 
-                .pvh.mth
-                  .ui-preloader
+                  .pvh.mth
+                    .ui-preloader
 
   .app-footer-push
 = render :partial => "application/footer"
