--- a/app/views/import/permissions.html.haml
+++ b/app/views/import/permissions.html.haml
@@ -12,7 +12,7 @@
             = _("Import media")
 
     .app-body-ui-container
-      .ui-container.bordered.bright.rounded
+      .ui-container.bordered.bright.rounded-right.rounded-bottom
 
         = render :partial => "import/stepline", :locals => {:step => 2}
 
