--- a/app/views/media_resources/_wrapper.html.haml
+++ b/app/views/media_resources/_wrapper.html.haml
@@ -1,7 +1,9 @@
 :ruby
   with_actions = (defined? with_actions and with_actions)
   as = (defined? as and as)
-  item_layout ||= "grid"
+  catalog_set = (defined? catalog_set and catalog_set)
+  category_set = (defined? category_set and category_set)
+  layout = (defined? layout and layout) || "grid"
   id ||= nil
 
 .ui-resources-holder.pal{id: id}
@@ -12,16 +14,10 @@
         - if defined? link
           %a.strong{:href => link} 
             = _("Show all")
-  %ul.ui-resources{:class => with_actions ? "active #{item_layout}" : "#{item_layout}"}
-    - media_resources.each do |mr|
-      - case as
-        - when :category
-          = render  "filter_sets/category", category: mr, catalog_set: catalog_set
-        - when :section
-          = render :partial => "filter_sets/section", :locals => {:section => mr, :category_set => category_set, :catalog_set => catalog_set}
-        - when :featured_set
-          = render :partial => "media_resources/media_resource",
-                   :locals => {:media_resource => mr, :with_actions => with_actions, :link => media_resource_path(mr.id)}
-        - else
-          = render :partial => "media_resources/media_resource",
-                   :locals => {:media_resource => mr, :with_actions => with_actions}
+
+  = render :partial => "media_resources/list",
+           :locals => {:media_resources => media_resources,
+                       :as => as,
+                       :catalog_set => @catalog_set,
+                       :category_set => @category_set,
+                       :with_actions => with_actions}
