--- a/app/views/media_resources/browse.html.haml
+++ b/app/views/media_resources/browse.html.haml
@@ -12,7 +12,7 @@
             = _("Browse for similar content")
 
     .app-body-ui-container
-      .bordered.ui-container.midtone.rounded.table
+      .bordered.ui-container.midtone.rounded-right.rounded-bottom.table
 
         = render :partial => "application/sidebar/browse"
 
