--- a/app/views/media_resources/index.html.haml
+++ b/app/views/media_resources/index.html.haml
@@ -25,10 +25,10 @@
 
     .app-body-ui-container
 
-      #ui-resources-list-container.app-body-content.ui-container.midtone.bordered.rounded-bottom.rounded-top
+      #ui-resources-list-container.app-body-content.ui-container.midtone.bordered.rounded-right.rounded-bottom
 
         = render :partial => "media_resources/list/toolbar", 
-                 :locals => {:subtitle => _("%d content elements" % @media_resources_count), :additional_class => "rounded-top"}
+                 :locals => {:subtitle => _("%d content elements" % @media_resources_count), :extra_class => "rounded-top-right"}
 
         = render :partial => "media_resources/list/filterbar"
 
