--- a/app/views/my/groups.html.haml
+++ b/app/views/my/groups.html.haml
@@ -16,7 +16,7 @@
             = _("New workgroup")
 
     .app-body-ui-container
-      .bordered.ui-container.midtone.rounded.table
+      .bordered.ui-container.midtone.table.rounded-right.rounded-bottom
 
         = render :partial => "application/sidebar/my_archive"
 
