--- a/app/views/my/keywords.html.haml
+++ b/app/views/my/keywords.html.haml
@@ -19,7 +19,7 @@
             = _("Import media")
 
     .app-body-ui-container
-      .bordered.ui-container.midtone.rounded.table
+      .bordered.ui-container.midtone.table.rounded-right.rounded-bottom
 
         = render :partial => "application/sidebar/my_archive"
 
