--- a/app/views/my/latest_imports.html.haml
+++ b/app/views/my/latest_imports.html.haml
@@ -27,14 +27,15 @@
                   = _("Import media")
 
     .app-body-ui-container
-      .bordered.ui-container.midtone.rounded.table
+      .bordered.ui-container.midtone.table.rounded-right.rounded-bottom
 
         = render :partial => "application/sidebar/my_archive"
 
         #ui-resources-list-container.app-body-content.table-cell.table-substance.ui-container
 
           = render :partial => "media_resources/list/toolbar",
-                   :locals => {:subtitle => "#{@latest_user_imports_count} Medieneinträge"}
+                   :locals => {subtitle: "#{@latest_user_imports_count} Medieneinträge",
+                               extra_class: 'rounded-top-right'}
 
           = render :partial => "media_resources/list/filterbar"
 
